@@ -1,6 +1,7 @@
 lilv (0.24.5) unstable;
 
   * Fix GCC8 warnings
+  * Fix creating directories across drives on Windows
 
  -- David Robillard <d@drobilla.net>  Tue, 04 Sep 2018 21:02:19 +0200
 
